--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .input {
+        @apply w-full mt-3 px-4 py-1 border-2 border-blue-200 rounded-xl bg-slate-50 focus:outline-none focus:border-blue-500 focus:ring-2 focus:ring-blue-200;
+    }
+}
